; ModuleID = '/home/carl/AnghaBench/Cello/benchmarks/Matmul/extr_matmul_c.c_main.c'
source_filename = "/home/carl/AnghaBench/Cello/benchmarks/Matmul/extr_matmul_c.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca double**, align 8
  %8 = alloca double**, align 8
  %9 = alloca double**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i32 300, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = sdiv i32 %10, 2
  %12 = mul nsw i32 %11, 2
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %6, align 4
  %14 = call double** @mm_gen(i32 %13)
  store double** %14, double*** %7, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call double** @mm_gen(i32 %15)
  store double** %16, double*** %8, align 8
  %17 = load i32, i32* %6, align 4
  %18 = load double**, double*** %7, align 8
  %19 = load double**, double*** %8, align 8
  %20 = call double** @mm_mul(i32 %17, double** %18, double** %19)
  store double** %20, double*** %9, align 8
  %21 = load i32, i32* %6, align 4
  %22 = load double**, double*** %7, align 8
  %23 = call i32 @mm_destroy(i32 %21, double** %22)
  %24 = load i32, i32* %6, align 4
  %25 = load double**, double*** %8, align 8
  %26 = call i32 @mm_destroy(i32 %24, double** %25)
  %27 = load i32, i32* %6, align 4
  %28 = load double**, double*** %9, align 8
  %29 = call i32 @mm_destroy(i32 %27, double** %28)
  ret i32 0
}

declare dso_local double** @mm_gen(i32) #1

declare dso_local double** @mm_mul(i32, double**, double**) #1

declare dso_local i32 @mm_destroy(i32, double**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
